--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0"
   },
-  "description": "WanderLust - Travel Planner"
+  "description": "WanderLust - Trip Planner"
 }
