--- a/package.json
+++ b/package.json
@@ -59,8 +59,5 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0"
   },
-  "description": "WanderLust - Trip Planner",
-  "engines": {
-    "node": "22.13.0"
-  }
+  "description": "WanderLust - Trip Planner"
 }
