--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,9 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "ci": {
+              "progress": true
             }
           },
           "defaultConfiguration": "production"
