--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,7 @@
               "namedChunks": true
             },
             "ci": {
-              "progress": true
+              "progress": false
             }
           },
           "defaultConfiguration": "production"
@@ -114,7 +114,7 @@
           },
           "configurations": {
             "ci": {
-              "progress": true,
+              "progress": false,
               "watch": false
             }
           }
